--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,6 +33,7 @@
     <title>Ecommerce App</title>
   </head>
   <body>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script
